--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -784,5 +784,6 @@
     <string name="one_handed_mode_summary">Allows swiping on the navigation bar to enable one handed mode</string>
     <string name="smartbar_double_tap_sleep_title">Double tap to sleep</string>
     <string name="smartbar_double_tap_sleep_summary">Double tap on empty navbar areas to sleep</string>
-
+<!-- Advanced Controls -->
+	<string name="advanced_controls_title">Advanced Controls</string>
 </resources>
